[-] MO : Fix on css AdminHome Tab
git-svn-id: http://svn.prestashop.com/trunk@5490 b9a71923-0436-4b27-9f14-aed3839534dd

--- a/css/admin.css
+++ b/css/admin.css
@@ -1105,6 +1105,7 @@ html[xmlns] .clearfix {
 .admin-box1 h5 a{
 	color: #FFFFFF;
 	font-size: 8pt;
+	float: right;
 	text-decoration: underline;
 	font-weight: normal;
 	padding-right: 10px;
@@ -1113,6 +1114,7 @@ html[xmlns] .clearfix {
 .admin-box2 h5 a{
 	color: #FFFFFF;
 	font-size: 8pt;
+	float: right;
 	text-decoration: underline;
 	font-weight: normal;
 	padding-right: 10px;
